[gd_scene load_steps=12 format=2]

[ext_resource path="res://UI/Scene/Menu/Menu.gd" type="Script" id=1]
[ext_resource path="res://UI/Fonts/yoster.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://UI/Components/Button/AnimatedButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://Audio/Menu.wav" type="AudioStream" id=4]
[ext_resource path="res://UI/Components/VolumeSettings/VolumeSettings.tscn" type="PackedScene" id=5]
[ext_resource path="res://UI/Scene/Bonus/Bonus.tscn" type="PackedScene" id=6]

[sub_resource type="Animation" id=3]
resource_name = "Background"
length = 2.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Color( 0.960784, 0.866667, 0.737255, 1 ), Color( 0.980392, 0.733333, 0.392157, 1 ), Color( 0.960784, 0.866667, 0.737255, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimationRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Color( 0.980392, 0.733333, 0.392157, 1 ), Color( 0.960784, 0.866667, 0.737255, 1 ), Color( 0.960784, 0.866667, 0.737255, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimationRect:rect_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1, 1.1, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1, 1 ), Vector2( 1e-05, 1e-05 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.960784, 0.866667, 0.737255, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimationRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.980392, 0.733333, 0.392157, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimationRect:rect_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ) ]
}

[sub_resource type="DynamicFont" id=2]
size = 128
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 2 )

[node name="Menu" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="BG" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.960784, 0.866667, 0.737255, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationRect" type="ColorRect" parent="BG"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_scale = Vector2( 1e-05, 1e-05 )
rect_pivot_offset = Vector2( 512, 300 )
color = Color( 0.980392, 0.733333, 0.392157, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="BG"]
autoplay = "Background"
playback_speed = 0.25
anims/Background = SubResource( 3 )
anims/RESET = SubResource( 4 )

[node name="Body" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 512, 300 )
__meta__ = {
"_edit_lock_": true
}

[node name="Title" type="Label" parent="Body"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -424.0
margin_top = 32.0
margin_right = 430.0
margin_bottom = 161.0
custom_colors/font_color = Color( 0.372549, 0.184314, 0.270588, 1 )
custom_fonts/font = SubResource( 2 )
text = "Last Moment"

[node name="Reflection" type="Label" parent="Body/Title"]
modulate = Color( 1, 1, 1, 0.25098 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -427.0
margin_top = 200.0
margin_right = 427.0
margin_bottom = 329.0
rect_scale = Vector2( 1, -0.9 )
custom_colors/font_color = Color( 0.372549, 0.184314, 0.270588, 1 )
custom_fonts/font = SubResource( 2 )
text = "Last Moment"

[node name="Play" parent="Body" instance=ExtResource( 3 )]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -96.0
margin_top = -152.0
margin_right = 96.0
margin_bottom = -56.0
custom_fonts/font = SubResource( 1 )

[node name="Version" type="Label" parent="Body"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = -40.0
margin_right = 143.0
margin_bottom = -7.0
custom_colors/font_color = Color( 0.372549, 0.184314, 0.270588, 1 )
custom_fonts/font = SubResource( 5 )
text = "Version"

[node name="Credits" parent="Body" instance=ExtResource( 3 )]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -168.0
margin_top = -72.0
margin_right = -25.0
margin_bottom = -24.0
text = "Credits"

[node name="Help" parent="Body" instance=ExtResource( 3 )]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -168.0
margin_top = -136.0
margin_right = -25.0
margin_bottom = -88.0
focus_mode = 2
text = "Help"

[node name="VolumeSettings" parent="Body" instance=ExtResource( 5 )]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 16.0
margin_top = -28.0
margin_right = 272.0
margin_bottom = 76.0

[node name="BonusButton" parent="Body" instance=ExtResource( 3 )]
visible = false
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -40.0
margin_top = -36.0
margin_right = 16.0
margin_bottom = 36.0
text = "<  "

[node name="Bonus" parent="." instance=ExtResource( 6 )]

[node name="Tween" type="Tween" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true
bus = "Music"

[connection signal="button_down" from="Body/Play" to="." method="_on_Play_button_down"]
[connection signal="pressed_safe" from="Body/Play" to="." method="_on_Play_pressed_safe"]
[connection signal="pressed_safe" from="Body/Credits" to="." method="_on_Credits_pressed_safe"]
[connection signal="pressed_safe" from="Body/Help" to="." method="_on_Help_pressed_safe"]
[connection signal="button_down" from="Body/BonusButton" to="." method="_on_BonusButton_button_down"]
